@@ -2,7 +2,7 @@ AUTOMAKE_OPTIONS = subdir-objects
 
 ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 
-AM_CXXFLAGS = $(LIBEBUS_CFLAGS) -I$(top_srcdir)/utils -fpic -Wall -Wextra
+AM_CXXFLAGS = $(LIBEBUS_CFLAGS) -I$(top_srcdir)/lib -fpic -Wall -Wextra
 
 bin_PROGRAMS = ebusd \
 	       ebusd_feed \
@@ -13,22 +13,22 @@ ebusd_SOURCES = src/main.cpp \
 		src/ebusloop.cpp \
 		src/cycdata.cpp \
 		src/network.cpp \
-		utils/thread.cpp \
-		utils/logger.cpp \
-		utils/tcpsocket.cpp \
-		utils/daemon.cpp \
-		utils/appl.cpp
+		lib/thread.cpp \
+		lib/logger.cpp \
+		lib/tcpsocket.cpp \
+		lib/daemon.cpp \
+		lib/appl.cpp
 
 ebusd_LDADD = $(LIBEBUS_LIBS) \
 	      -lpthread
 
 dist_noinst_SCRIPTS = autogen.sh
 
-ebusd_feed_SOURCES = tools/ebusd_feed.cpp \
-		     utils/appl.cpp
+ebusd_feed_SOURCES = tool/ebusd_feed.cpp \
+		     lib/appl.cpp
 
 ebusd_feed_LDADD = $(LIBEBUS_LIBS)
 
-ebusd_send_SOURCES = tools/ebusd_send.cpp \
-		     utils/appl.cpp \
-		     utils/tcpsocket.cpp
+ebusd_send_SOURCES = tool/ebusd_send.cpp \
+		     lib/appl.cpp \
+		     lib/tcpsocket.cpp
