@@ -48,7 +48,7 @@ Tools
 -----
 
 ebusd_feed - send dump files via virtual serial device for debugging purpose.
-ebusd_send - small client for sending commands (get, set, cyc and hex) to ebusd.
+ebusd_send - small client for sending commands to ebusd.
 
 For usage and further information take a look on help page.
 
