@@ -4,6 +4,7 @@ ebusd - ChangeLog
 2014-06-03  Roland Jax  <roland.jax@liwest.at>
 * ebusd_send added.
 * class Appl: program arguments parsing improved.
+* directories utils->lib and tools->tool renamed.
 * Version changed from 0.2.0 to 0.2.1
 
 2014-05-11  Roland Jax  <roland.jax@liwest.at>
